@@ -6,7 +6,7 @@
     <cmd name="FileSave"         pixtype="stock" pixname="Save"         _label="_Save"         _tip="Save the current project" sensitive="0"/>
     <cmd name="FileSaveAs"       pixtype="stock" pixname="Save As"      _label="Save _As..."   _tip="Save the current project with a different name"/>
     <cmd name="FilePrint"        pixtype="stock" pixname="Print"        _label="_Print..."     _tip="Print the current project"/>
-    <cmd name="FilePrintPreview" pixtype="stock" pixname="gtk-print-preview" _label="_Print Preview" _tip="Print preview of the current project"/>
+    <cmd name="FilePrintPreview" pixtype="stock" pixname="gtk-print-preview" _label="Print Pre_view" _tip="Print preview of the current project"/>
     <cmd name="FileClose"        pixtype="stock" pixname="Close"        _label="_Close"        _tip="Close the current file"/>
     <cmd name="FileExit"         pixtype="stock" pixname="Quit"         _label="_Quit"         _tip="Exit the program"/>
     <cmd name="EditCut"          pixtype="stock" pixname="Cut"          _label="C_ut"          _tip="Cut the selection" sensitive="0"/>
@@ -31,11 +31,11 @@
       <placeholder name="Import placeholder" delimit="top"/>
       <separator/>
       <menuitem    name="FileSave"         verb=""  accel="*Control*s"/>
-      <menuitem    name="FileSaveAs"       verb=""/>
+      <menuitem    name="FileSaveAs"       verb=""  accel="*Shift**Control*s"/>
       <placeholder name="Export placeholder" delimit="top"/>
       <separator/>
       <menuitem    name="FilePrint"        verb=""  accel="*Control*p"/>
-      <menuitem    name="FilePrintPreview" verb=""/>
+      <menuitem    name="FilePrintPreview" verb=""  accel="*Shift**Control*p"/>
       <placeholder name="EggRecentDocuments" delimit="top"/>
       <separator/>
       <menuitem    name="FileClose"        verb=""  accel="*Control*w"/>
@@ -87,6 +87,7 @@
     <toolitem      name="FileSave"         verb=""    _label="Save" />
     <separator/>
     <toolitem      name="FilePrint"        verb=""    _label="Print"/>
+    <toolitem      name="FilePrintPreview" verb=""    _label="Print preview"/>
     <separator/> 
     <toolitem      name="EditUndo"         verb=""    _label="Undo"/>
     <toolitem      name="EditRedo"         verb=""    _label="Redo"/>
