@@ -1,3 +1,7 @@
+2004-06-03  Setul Patel  <setulkumarpatel@yahoo.com>
+
+	* data/ui/main-window.ui: Fix bug #143662.
+	
 2004-06-02  Richard Hult  <richard@imendio.com>
 
 	* Commit patch from Lincoln Phipps to fix bug #140694.
